- Add (optional) support for Ox programs via the "foreign"
  command
- Ctrl-X in editing windows: cut text, don't exit
- Data importers: add a comment to the imported dataset
  saying where it came from
- 3-D graphs: use the wxt terminal in gnuplot if it's
  available
- Fix for putting RTF onto clipboard on OS X
- Observation labels ("case markers"): print up to 15
  characters of such labels

7/8/2009 version 1.8.2
- Fixes for GARCH "corner cases"
- "summary" command: add --simple and --by=byvar options
- Fix another XLS import bug
- nls, mle, gmm, arma: allow continuation of scripts when
  these estimators fail to converge, in which case the variable
  $error is set to a non-zero value (new --continue option)
- "fcast" command: add more forecast evaluation statistics
- Add fcstats function to provide statistics for evaluation of
  forecasts
- GUI model window, Graphs menu: add scatter plot of actual vs
  fitted a la Theil
- Rationalize use of GRETL_KEEP_GOING and halt_on_error: induce
  consistency between CLI and GUI programs
- xtab command: add --matrix option to take frequencies from
  a named matrix
- add "anova" command (one-way and two-way) plus GUI menu entry
- Main window: make column headings clickable for sorting
  variables by ID number or name
- Enhancements to Edit Attributes dialog for data series
- "heckit command": fix problem with some residuals being
  unavailable via $uhat
- Printing: fix bad output from "pergm" command when the 
  spectral density is very large
- Printing: revise printout of summary statistics for better
  consistency in non-English locales and for long variable
  names
- Fix bug: allow for the fact that TRAMO truncates long variable
  names to 8 characters in the names of its output file
- Fix bug: ensure that old X-12-ARIMA output files get deleted
  before a new run
- TRAMO and X-12-ARIMA: try to provide better information in
  case of errors 
- Add GUI option: suppress detailed printout from X-12-ARIMA